--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Personal website",
   "main": "index.js",
+  "module": "main.js",
   "scripts": {
     "test": "mocha"
   },
@@ -15,5 +16,21 @@
   "bugs": {
     "url": "https://github.com/jonseitz/jonathanseitz.com/issues"
   },
-  "homepage": "https://github.com/jonseitz/jonathanseitz.com#readme"
+  "homepage": "https://jonathanseitz.com",
+  "dependencies": {
+    "esm": "^3.2.6",
+    "front-matter": "^3.0.1",
+    "marked": "^0.6.1",
+    "preact": "^8.4.2",
+    "preact-render-to-string": "^4.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/preset-typescript": "^7.3.3",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
+  }
 }
